fix(prev-next): layout issues on small screens (#460)

--- a/components/prev-next/index.css
+++ b/components/prev-next/index.css
@@ -2,7 +2,7 @@
 .prev-next {
   display: flex;
 
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 
   gap: 1rem;
   justify-content: space-between;
@@ -24,6 +24,35 @@
     &:visited {
       color: var(--color-link-visited) !important;
     }
+  }
+
+  @media (--screen-xsmall) {
+    display: grid;
+    grid-template-areas:
+      "title title"
+      "prev next";
+
+    li.menu {
+      grid-area: title;
+      justify-self: center;
+    }
+
+    li.prev {
+      grid-area: prev;
+      justify-self: start;
+    }
+
+    li.next {
+      grid-area: next;
+      justify-self: end;
+    }
+  }
+
+  .prev a,
+  .next a {
+    display: flex;
+    gap: 0.25rem;
+    align-items: center;
   }
 
   li {
